# my-docksmith

./: README.md  REPORT.md  pyproject.toml  run.sh
docksmith/: __init__.py  builder.py  cache.py  cli.py  images.py  layers.py  parser.py  runtime.py  store.py
sample/: Docksmithfile  run.sh
scripts/: setup_images.py
