[project]
name = "docksmith"
version = "0.1.0"
description = "A simplified Docker-like build and runtime system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
docksmith = "docksmith.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
